# proj-snake

./: CHANGELOG.md  README.md  proj-snake.cabal  stack.yaml
src/: AppTypes.hs  Snake.hs  UI.hs  UITypes.hs
test/: tests.hs
