cabal-version:      2.4
name:               proj-snake
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dane Bulat
maintainer:         dane.bulat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proj-snake
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , proj-snake
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  UI
    other-modules:    AppTypes
                    , Snake
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.14.3.0
                    , brick == 1.1.*
                    , containers
                    , data-default
                    , linear
                    , lens
                    , microlens
                    , microlens-mtl
                    , random
                    , text
                    , transformers
                    , vty 
    default-language: Haskell2010